# DjinniPractice

./: README.md  calculator.djinni
android_project/: Test Results - ExampleAndroidUnitTest.html  settings.gradle
android_project/app/: CMakeLists.txt  build.gradle
android_project/app/src/androidTest/java/com/example/juntung/myapplication/: ExampleAndroidUnitTest.java  ExampleInstrumentedTest.java  MainActivityTest.java
android_project/app/src/main/: AndroidManifest.xml
android_project/app/src/main/cpp/: native-lib.cpp
android_project/app/src/main/java/com/example/juntung/myapplication/: MainActivity.java
android_project/app/src/main/res/layout/: activity_main.xml
android_project/app/src/test/java/com/example/juntung/myapplication/: ExampleUnitTest.java
android_project/gradle/wrapper/: gradle-wrapper.properties
cpp/: calculator.hpp
java/com/example/juntung1/: Calculator.java  MyClientInterface.java
jni/: NativeCalculator.cpp  NativeCalculator.hpp  calculator.cpp  calculator.hpp
objc/: HWCalculator+Private.h  HWCalculator+Private.mm  HWCalculator.h
src/cpp/: calculator_impl.cpp  calculator_impl.hpp
xcode_project/CalculatorApp/CalculatorApp/: AppDelegate.swift  CalculatorApp-Bridging-Header.h  ViewController.swift
xcode_project/CalculatorApp/CalculatorApp.xcodeproj/: project.pbxproj
xcode_project/CalculatorApp/CalculatorApp/Base.lproj/: Main.storyboard
xcode_project/CalculatorApp/CalculatorApp/calculators/: calculator.hpp  calculator_impl.cpp
(+1 files in other folders)
